# data2csv

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  run_simple_remote.py
src/: __init__.py  fastmcp_server.py  simple_remote_server.py
src/models/: __init__.py  data_models.py
src/tools/: __init__.py  csv_converter.py  excel_converter.py  nextcloud_uploader.py
