[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data2csv"
version = "0.1.0"
description = "MCP server for converting 2D data to CSV and Excel formats"
authors = [{name = "User"}]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "fastapi>=0.116.1",
    "requests>=2.32.5",
    "sse-starlette>=1.6.0",
    "aiohttp>=3.12.15",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
data2csv-server = "src.server:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
